src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple-2.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
DELETE FROM
  "public"."peoples"
WHERE
  "public"."peoples"."id" = $0;
