src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple-4.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."mysimpletable" (
    "public"."mysimpletable"."first-name",
    "public"."mysimpletable"."last-name"
  )
VALUES
  ($0, $1) RETURNING *;
