src/builder/tests/snapshots/ciboulette2postgres__builder__tests__simple-6.snap
---
source: src/builder/tests/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."people_article" (
    "public"."people_article"."author_id",
    "public"."people_article"."article_id"
  )
SELECT
  "public"."cte_main_insert"."id" AS "author_id",
  "public"."cte_rel_data"."id" AS "article_id"
FROM
  "public"."cte_main_insert",
  "public"."cte_rel_data" RETURNING "public"."people_article"."id",
  "public"."people_article"."author_id",
  "public"."people_article"."article_id";
